learn-amazon-eks/hellonode/fargate/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellonode
spec:
  selector:
    matchLabels:
      run: load-balancer-example
  replicas: 2
  template:
    metadata:
      labels:
        run: load-balancer-example
    spec:
      containers:
        - name: hellonode
          image: releaseworks/hellonode:2241f48
          ports:
            - containerPort: 8000
              protocol: TCP
