learn-amazon-eks/hellonode/fargate/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hellonode-service
spec:
  selector:
    run: load-balancer-example
  ports:
    - port: 80
      targetPort: 8000
  type: NodePort
