learn-amazon-eks/hellonode/fargate/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "hellonode"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    run: hellonode
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "hellonode-service"
              servicePort: 80
